fix(calcite): emit IS NULL for null literals + null-tolerant Filter ctor
Downstream of CalcitePlannerAdapters.unwrapSqlNull(), a null literal
flowing through to RexBuilder needs SQL-NULL-aware predicate emission:

* PlannerRequest.Filter ctor swaps List.copyOf (null-hostile) for
  Collections.unmodifiableList(new ArrayList<>(literals)). Same
  immutability guarantee, now tolerates null elements.

* CalciteSqlPlanner.filterRex / tupleFilterRex route null literals
  through a new eqOrIsNull(b, col, lit) helper that emits b.isNull(col)
  instead of b.equals(col, b.literal(null)) — col = NULL is always NULL
  in SQL (never matches), the wrong predicate.

Confirmed: BasicQueryTest.testNullMember now passes end-to-end
(previously NPE on List.copyOf).

Refs saiku#809.